src/Header.css
.header {
  max-width: 840px;
  margin: 50px auto;
  padding: 0 50px;
  display: flex;
  justify-content: space-between;
  font-family: 'Futura', sans-serif;
  font-size: 1.125em;
  font-weight: 700;
}

.left-nav {
  display: flex;
}

.left-nav a {
  margin: 0 20px;
}

.left-nav a:last-child {
  margin-right: 0;
}

